# FileFlow

./: .gitignore  Cargo.toml  LICENSE  PRODUCT.md  README.md  install.sh  package-lock.json  package.json
core/: Cargo.toml
core/src/: config.rs  error.rs  folder.rs  ingest.rs  layout.rs  lib.rs  photos.rs  util.rs
core/tests/: core_tests.rs
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  state.rs  volume.rs  watchers.rs
