[package]
name = "fileflow-core"
edition.workspace = true
version.workspace = true
description = "Pure domain logic for FileFlow: config, card ingest, Photos import. No Tauri."

[lib]
name = "fileflow_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
regex.workspace = true
chrono.workspace = true
filetime.workspace = true

[dev-dependencies]
tempfile = "3"
