[package]
name = "fileflow"
version = "0.1.0"
description = "Watch SD cards and Lightroom exports; ingest photos and import to Apple Photos."
authors = ["Guillaume Lemer"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk).
name = "fileflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
fileflow-core = { path = "../core" }
notify = "6"
plist = "1"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
